# ROS_initiation

./: dummit.txt
keyboard_controller/src/: keyboard_controller.cpp
ras_lab1_distance_sensor/src/: generate_distance_node.cpp
ras_lab1_launch/config/: lab1.rviz
ras_lab1_launch/launch/: .kobuki_lab1.launch.swp  kobuki_lab1.launch
ras_lab1_world/src/: world_main.cpp
ras_maze/own_map/: CMakeLists.txt  package.xml
ras_maze/own_map/src/: own_map.cpp
ras_maze/ras_maze_launch/launch/: kobuki_maze.launch  maze_visualize.launch  static_tf.launch
ras_maze/ras_maze_map/src/: maze_map_node.cpp
simu/: CMakeLists.txt  package.xml
simu_kinematics/path_follower/: CMakeLists.txt  package.xml
simu_launch/: CMakeLists.txt  package.xml
simu_launch/launch/: simu_launch.launch
simu_msgs/: CMakeLists.txt  package.xml
simu_msgs/msg/: RobotPose.msg  vectorList.msg
simu_planning/heuristic_grids/: CMakeLists.txt  package.xml
simu_planning/heuristic_grids/src/: heuristic_grids_server.cpp
simu_srvs/: CMakeLists.txt  package.xml
simu_visualization/: CMakeLists.txt  ex.txt  package.xml
simu_visualization/config/: simu_maze.rviz
simu_visualization/launch/: rviz_plots.launch  rviz_remote.launch
simu_visualization/src/: map_visualization.cpp  robot_visualization.cpp
