<package format="2">
  <name>simu</name>
  <version>0.0.0</version>
  <description>The simu package</description>

  <maintainer email="matgau@kth.se">Mathieu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
        <metapackage/>
  </export>
</package>
